# captains-log

./: .dockerignore  .gitignore  Dockerfile  README.md  backfill-dng-previews  createtag  db-backup  docker-compose.local.yml  docker-compose.yml  dockerhub-up  ideas.md  main.py  pushtag  pyproject.toml  upgrade
.github/workflows/: docker-publish.yml
app/: __init__.py  attachments.py  backfill_dng_previews.py  config.py  database.py  main.py  migration.py  models.py  schemas.py  tags.py  timezone.py
app/migrations/: 000_initial.sql  001_add_tags.sql  002_add_attachments.sql
app/static/: style.css
app/templates/: index.html
nginx/: default.conf
ops/cron/: captains-log-backup.cron.example
tests/: test_app.py  test_backfill_dng_previews.py  test_db_backup.py  test_dockerhub_up.py
