[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captains-log"
version = "0.1.0"
description = "Small diary web app with FastAPI, SQLite, and Docker deployment."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "python-multipart>=0.0.20",
    "rawpy>=0.25.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["migrations/*.sql", "templates/*.html", "static/*.css", "static/*.png", "static/*.svg"]
